fix hover, responsive, colorimetry and footer. Missing Font and spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,19 +11,16 @@ body {
 $paddingTopHigh: 2rem;
 $paddingTopLow: 1.25rem;
 $paddingTopVeryLow: 0.25rem;
-// Variables
-// @media (max-width: 1250px) {
-//   .container {
-//     width: 90vh;
-//   }
-// }
 
-@media screen and (min-device-width: 720px) {
-  .container {
-    margin: auto;
-    width: 95%;
-  }
-}
+$cleargrey: #f6f6f6;
+$primary: #9356dc;
+$secondary: #ff79da;
+$tertiary: #99e2d0;
+
+// Breakpoints
+$breakpoint: 720px;
+
+// Mixin
 
 .header {
   width: 100%;
@@ -38,10 +35,10 @@ $paddingTopVeryLow: 0.25rem;
 .heroSection {
   padding-bottom: 1rem;
   text-align: center;
-  background-color: rgba(128, 128, 128, 0.196);
+  background-color: $cleargrey;
   &__locPin {
     padding: $paddingTopLow;
-    background-color: rgba(128, 128, 128, 0.196);
+    background-color: #eaeaea;
     gap: 0.75rem;
     display: flex;
     align-items: center;
@@ -61,18 +58,18 @@ $paddingTopVeryLow: 0.25rem;
       margin: 0;
     }
 
-    &__text {
+    .text {
       opacity: 0.7;
     }
 
-    &__button {
+    .button {
       font-weight: 500;
       padding: 1rem;
       border-radius: 2rem;
       width: fit-content;
       text-align: center;
       color: whitesmoke;
-      background: linear-gradient(#ff79da, #9356dc);
+      background: linear-gradient($primary, $secondary);
       box-shadow: 1px 2px 5px 1px rgba(0, 0, 0, 0.13);
     }
   }
@@ -85,13 +82,32 @@ $paddingTopVeryLow: 0.25rem;
     font-size: xx-large;
     font-weight: 700;
     margin: 0;
+    @media screen and (min-width: $breakpoint) {
+      text-align: center;
+    }
+    @media screen and (max-width: $breakpoint) {
+      text-align: left;
+    }
   }
   &__card {
+    &:hover {
+      background-color: lighten($primary, 35);
+    }
+    &:hover > .icon {
+      opacity: 1;
+      color: $primary;
+    }
+    cursor: pointer;
     background-color: rgb(246, 246, 246);
     margin-top: $paddingTopHigh;
     margin-left: auto;
     margin-right: auto;
-    width: 80vw;
+    @media screen and (min-width: $breakpoint) {
+      width: 40vw;
+    }
+    @media screen and (max-width: $breakpoint) {
+      width: 65vw;
+    }
     height: 10vh;
     border-radius: 2rem;
     display: flex;
@@ -102,7 +118,7 @@ $paddingTopVeryLow: 0.25rem;
     position: relative;
     padding-left: 3rem;
     box-shadow: 1px 2px 5px 1px rgba(0, 0, 0, 0.13);
-    &__number {
+    .number {
       color: white;
       background-color: #9356dc;
       width: 0.01rem;
@@ -113,15 +129,15 @@ $paddingTopVeryLow: 0.25rem;
       justify-content: center;
       padding: 1em;
       position: absolute;
-      left: -01.25rem;
+      left: -1rem;
     }
-    &__icon {
+    .icon {
       color: lighten($color: #000000, $amount: 25);
       display: flex;
       justify-content: center;
       width: 10%;
     }
-    &__title {
+    .title {
       color: lighten($color: #000000, $amount: 25);
     }
   }
@@ -133,10 +149,21 @@ $paddingTopVeryLow: 0.25rem;
     font-size: xx-large;
     font-weight: 700;
     margin: 0;
+    @media screen and (min-width: $breakpoint) {
+      text-align: center;
+    }
+    @media screen and (max-width: $breakpoint) {
+      text-align: left;
+    }
   }
   &__card {
     margin-top: $paddingTopLow;
-    width: 80vw;
+    @media screen and (min-width: $breakpoint) {
+      width: 70vw;
+    }
+    @media screen and (max-width: $breakpoint) {
+      width: 80vw;
+    }
     height: 50vh;
     margin-left: auto;
     margin-right: auto;
@@ -144,7 +171,7 @@ $paddingTopVeryLow: 0.25rem;
     text-align: center;
     overflow: hidden;
     box-shadow: 1px 2px 5px 1px rgba(0, 0, 0, 0.13);
-    &__image {
+    .image {
       width: 100%;
       height: 70%;
       position: relative;
@@ -153,16 +180,18 @@ $paddingTopVeryLow: 0.25rem;
         width: 100%;
         object-fit: cover;
       }
-      &__tag {
+      .tag {
         border-radius: 0.25rem;
         padding: 0.5rem;
-        background-color: green;
+        background-color: $tertiary;
+        color: darken($tertiary, 40);
+        font-weight: 600;
         position: absolute;
         top: 5%;
         right: 5%;
       }
     }
-    &__infoWrapper {
+    .infoWrapper {
       height: 30%;
       margin-top: auto;
       display: flex;
@@ -170,7 +199,7 @@ $paddingTopVeryLow: 0.25rem;
       justify-content: space-between;
       padding-left: 1rem;
       padding-right: 2rem;
-      &__subWrapper {
+      .subWrapper {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -183,18 +212,55 @@ $paddingTopVeryLow: 0.25rem;
           margin: 0;
         }
       }
-      &__likebtn {
-        transform: scale(1.75);
+      .heart_icon {
+        cursor: pointer;
+        opacity: 1;
+        transition: all 200ms;
+        transition-delay: 0ms, 150ms;
+        position: absolute;
+        background-color: white;
+        font-size: 1.5em;
+        &:hover {
+          opacity: 0;
+        }
+        &:hover + .heart_icon_filled {
+          opacity: 1;
+        }
+        &_filled {
+          background-clip: text;
+          color: transparent;
+          background-image: -webkit-linear-gradient($primary, $secondary);
+          opacity: 1;
+          font-size: 1.5em;
+        }
       }
     }
   }
 }
 
 .footer {
-  height: 12vh;
-  background-color: black;
+  background-color: #353535;
   color: white;
-  border: solid;
-  text-align: center;
-  padding: 1em;
+
+  text-align: left;
+  padding-top: $paddingTopLow;
+  padding-bottom: $paddingTopLow;
+  .container {
+    margin: auto;
+    @media screen and (min-width: $breakpoint) {
+      width: 70vw;
+    }
+    @media screen and (max-width: $breakpoint) {
+      width: 80vw;
+    }
+    .logo {
+      width: 15%;
+    }
+    .link {
+      i {
+        margin-right: 1%;
+      }
+      margin-top: $paddingTopVeryLow;
+    }
+  }
 }
